app/vaultwarden/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  internalTrafficPolicy: Local
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
