app/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /healthz { return 403; }
      location ^~ /healthz/ { return 403; }
      location = /admin { return 403; }
      location ^~ /admin/ { return 403; }
spec:
  tls:
    - secretName: vaultwarden-tls
      hosts:
        - vault.teapot.ovh
  rules:
    - host: vault.teapot.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  name: http
